[gd_scene load_steps=3 format=3 uid="uid://coeqc7qdlukfr"]

[ext_resource type="Script" uid="uid://bqak0xdsxf2xg" path="res://assets/scripts/slash.gd" id="1_tonu5"]
[ext_resource type="SpriteFrames" uid="uid://cvbfynknk3i5o" path="res://assets/images/slash/slashFrames.tres" id="1_vkclc"]

[node name="clawSlash" type="Area2D"]
collision_layer = 32
script = ExtResource("1_tonu5")

[node name="slashSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(60, 6)
scale = Vector2(0.5, 0.2)
sprite_frames = ExtResource("1_vkclc")
animation = &"slash"
frame_progress = 0.46669304

[node name="slashTimer" type="Timer" parent="."]
wait_time = 0.326
one_shot = true

[node name="cooldown" type="Timer" parent="."]
one_shot = true

[node name="col" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(48, 65, 100, 53, 143, 35, 155, 3, 136, -24, 108, -33, 59, -44, 0, -47, -10, -1, -23, 64)

[connection signal="timeout" from="slashTimer" to="." method="_timer_end"]
